--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>  
         <div>
-            <p id="p" hidden>Yo tambien te amo</p>
-        <h1 id="1">Me Perdonas</h1>
+            <p id="p" hidden>Yo tambien te amo tesori <3</p>
+        <h1 id="1">Me Perdonas Bebi?, Me amas para siempre?</h1>
         <section>
         <button id="Si">Si</button>
         <button id="No">No</button>
